# slay-time-analyzer

./: Cargo.toml  README.md  make_service.py  startstats.py  swaylauncher.sh
src/: analyzer.rs  main.rs  sampler.rs  telegram_utils.rs
