[package]
name = "telegramchatstats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telegramchatstats-sampler"
path = "src/sampler.rs"

[dependencies]
regex = "1.10.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
swayipc = "3.0.1"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.10.0"
systemd-journal-logger = "2.1.0"
